# rosetta

./: .gitignore  CHANGELOG.md  CMakeLists.txt  FEATURES.md  LICENSE  LONG_README.md  README.md  SHORT_README.md  TODO.md
.github/workflows/: marp.yml
doc/: any.md  generator-usage.md  project_json_user_guide.md  rosetta-introspection.md
docs/: EXTENDING_BACKEND.md  FREE_FUNCTIONS.md  GENERATE.md  MANIFEST.md  OTHER_ANNOTATIONS.md  OUT_OF_LINE_ANNOTATIONS.md  QUICKSTART.md  TODO.md  slides.md
examples/: .gitignore  README.md  person.h
examples/all/: README.md  registration.h
examples/all/emscripten/: CMakeLists.txt  README.md  binding.cxx  test.mjs
examples/annotate-manifest/: .gitignore  README.md  manifest.json  test.js  test.py  widget.ann.json  widget.h
examples/bindings/julia/: CMakeLists.txt  README.md  auto_jlcxx.cpp  test_reflected_person.jl
examples/bindings/node/: CMakeLists.txt  README.md  auto_napi.cpp  package.json  reflected_person.node  test_reflected_person.js
examples/bindings/python/: CMakeLists.txt  README.md  auto_pybind.cpp  pybind_visitor.h  test_reflected_person.py
examples/bindings/rest/: CMakeLists.txt  README.md  auto_rest.cpp  index.html  test_rest.sh
examples/bindings/web/: CMakeLists.txt  README.md  auto_emscripten.cpp  emscripten_visitor.hpp  index.html  test_reflected_person.js
examples/docgen/: Algo.h  CMakeLists.txt  README.md  main.cpp
examples/dynamic-lib/space/: CMakeLists.txt
examples/dynamic-lib/space/build-wasm/: CMakeCache.txt  Makefile
examples/dynamic-lib/space/include/: BoundingBox.h  Vector3.h
examples/dynamic-lib/space/src/: BoundingBox.cpp  Vector3.cpp
examples/em/inheritance/: CMakeLists.txt  binding.cxx  test.mjs  test_module.mjs
examples/em/simple/: CMakeLists.txt  README.md  binding.cxx  test_module.mjs
examples/http/: CMakeLists.txt  main.cxx
examples/imgui/: CMakeLists.txt  main.cxx
examples/moc/: CMakeLists.txt  README.md  main.cpp
examples/paraview/: .gitignore  CMakeLists.txt  README.md  main.cpp  threshold.h
examples/py/: CMakeLists.txt  README.md
examples/py/abstract/: CMakeLists.txt  binding.cxx  test.py
examples/py/complex/: CMakeLists.txt  binding.cxx  test.py
examples/py/complex_ptr/: CMakeLists.txt  binding.cxx
examples/py/containers/: CMakeLists.txt  binding.cxx  test.py
examples/py/containers2/: CMakeLists.txt  binding.cxx
examples/py/dynamic_binding/: CMakeLists.txt  binding.cxx  test.py
examples/py/dynamic_lib/: CMakeLists.txt
examples/py/dynamic_lib/flower/: CMakeLists.txt
examples/py/dynamic_lib/flower/include/: flower.h
examples/py/dynamic_lib/flower/src/: flower.cxx
examples/py/dynamic_lib/lib/: libflower.1.0.0.dylib  libflower.1.dylib  libflower.dylib
examples/py/dynamic_lib/pyflower/: CMakeLists.txt  binding.cxx  test.py
examples/py/from_idl/: CMakeLists.txt  Matrix4x4.h  README.md  Shape.h  Transform.h  binding.cxx  geometry_functions.h  mylib.h  test.py
examples/py/from_idl/mylib/: Scene.h  Sphere.h
examples/py/lib_dynamic/: CMakeLists.txt  README.md
examples/py/lib_dynamic/flower/: CMakeLists.txt
examples/py/lib_dynamic/pyflower/: CMakeLists.txt  binding.cxx  test.py
examples/py/lib_static/: CMakeLists.txt
examples/py/lib_static/flower/: CMakeLists.txt
examples/py/lib_static/pyflower/: test.py
examples/py/pmp/: CMakeLists.txt
examples/py/simple/: CMakeLists.txt  INSTALL.md  README.md  binding.cxx  install.bat  install.sh  rebuild.sh  setup.py  test.py
examples/py/static_lib/: README.md
examples/py/static_lib/flower/include/: flower.h
examples/py/static_lib/pyflower/: CMakeLists.txt  test.py
examples/python/basic/: CMakeLists.txt  README.md  binding.cxx  setup.py  test.py  test_debug.py
examples/qml/: CMakeLists.txt  Main.qml  README.md  main.cpp  qml_visitor.h  reflected_object.h
examples/qt/: CMakeLists.txt  README.md  algo.h  main.cpp  widget_visitor.h
examples/qt/ex1/: CMakeLists.txt  main.cxx
examples/qt/ex2/: CMakeLists.txt  ColorDialog.qml  Main.qml  Main_standalone.qml  PropertySection.qml  main.cxx  qml.qrc  rosetta_registration.h  scene_objects.h
examples/qt/minimal/bridge/: CMakeLists.txt  README.md  main.cxx  main.qml
examples/qt/minimal/editor/: CMakeLists.txt  main.cxx
examples/qt/nodes/: CMakeLists.txt  main.cxx  main_bis.cxx
examples/qt/qml/: CMakeLists.txt  Main.qml  PropertyRow.qml  main.cxx
examples/trampoline-node/: CMakeLists.txt  README.md  auto_napi.cpp  package.json  shapes.h  test_shapes.js
generators/: BindingGeneratorLib.h  ConfigParser.h  EmbindGenerator.h  GeneratorConfig.h  JsBindingGypGenerator.h  JsExampleGenerator.h  JsGenerator.h  JsIndexGenerator.h  JsPackageJsonGenerator.h  JsReadmeGenerator.h  MultiTargetGenerator.h  NapiGenerator.h  ProjectConfig.h  Pybind11Generator.h  PythonCMakeGenerator.h  PythonExampleGenerator.h  PythonPyprojectGenerator.h  PythonReadmeGenerator.h  PythonSetupPyGenerator.h  PythonStubGenerator.h  README.md  RestApiCMakeGenerator.h  RestApiExampleGenerator.h  RestApiGenerator.h  RestApiReadmeGenerator.h  TypeScriptGenerator.h  USAGE.md  WasmCMakeGenerator.h  WasmExampleGenerator.h  WasmGenerator.h  WasmReadmeGenerator.h  main.cxx  main_example.cxx  project.json
idl/: INCLUDE_GUIDE.md  QUICK_REF_GUIDE.md  QUICK_START.md  README.md  idl_parser.py  js_generator.py  py_binding_generator.py  rosetta_idl.py  rosetta_idl_parser.py
ild/: ild_parser.py  js_generator.py  rosetta_ild.py
tests/: CMakeLists.txt  annotate_json.cpp  annotations.cpp  docgen.cpp  hello.cpp  inheritance.cpp  moc.cpp  node_trampoline.cpp  overloads.cpp  python_trampoline.cpp  reflected.cpp  serialization.cpp
tools/: README.md  pyproject.toml
tools/rosetta_create/: __init__.py  cli.py  generator.py
tools/rosetta_gen/: CMakeLists.txt  rosetta_gen.cpp
unittests/: README.md  TEST.h  abstract_test.cxx  any_ctors_test.cxx  any_test.cxx  derived_test.cxx  doc_test.cxx  functions_test.cxx  introspection2_test.cxx  introspection_test.cxx  lambda_constructor_test.cxx  lambda_method_test.cxx  overload_test.cxx  setter_test.cxx  static_test.cxx  virtual_field_test.cxx
(+453 files in other folders)
